Add sources for missing c calls in substrate (linux-only)